testdata/invalid/alias_invalid_02.lisp
;;error:5:7-8:unknown symbol
(defcolumns (Y :i16))
(defalias
    X Y
    A B)
